--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
     "access": "public"
   },
   "scripts": {
-    "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
-    "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
-    "ci:publish": "lerna publish from-package --yes",
-    "ci:release": "lerna version --no-git-tag-version",
-    "coverage": "yarn test --coverage",
-    "extract-translations": "lerna run extract-translations",
-    "prettier": "prettier --config prettier.config.js --write \"packages/**/*.{ts,tsx}\"",
     "start": "openmrs develop --backend https://ohri-working.globalhealthapp.net --sources 'packages/esm-*-app/'",
     "start:core": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-ohri-core-app",
     "start:covid": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-covid-app",
     "start:hiv": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-hiv-app",
     "start:cervical-cancer": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-cervical-cancer-app",
     "start:form-render": "openmrs develop --backend https://ohri-dev.globalhealthapp.net --sources packages/esm-form-render-app",
+    "prettier": "prettier --config prettier.config.js --write \"packages/**/*.{ts,tsx}\"",
+    "prepare": "husky install",
     "test": "jest --config jest.config.js --verbose false --passWithNoTests",
     "test-watch": "jest --watch --config jest.config.js",
-    "verify": "lerna run lint -- --fix && lerna run test && lerna run typescript",
+    "verify": "turbo run lint && turbo run typescript && yarn run test",
+    "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
+    "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
+    "ci:publish": "lerna publish from-package --yes",
+    "ci:release": "lerna version --no-git-tag-version",
+    "coverage": "yarn test --coverage",
+    "extract-translations": "lerna run extract-translations",
     "ci:publish-next": "lerna publish from-package --no-git-reset --dist-tag next --yes",
     "ci:publish-next-patch": "lerna version patch && lerna publish from-package --no-git-reset --dist-tag next --yes",
     "release": "lerna version --no-git-tag-version"
@@ -38,7 +39,7 @@
     }
   },
   "devDependencies": {
-    "@openmrs/esm-framework": "^4.0.2",
+    "@openmrs/esm-framework": "4.0.2-pre.336",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.165",
     "@swc/jest": "^0.2.20",
@@ -52,6 +53,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack-env": "^1.16.4",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.18.0",
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -63,7 +65,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.5.1",
-    "husky": "^6.0.0",
+    "husky": "^8.0.0",
     "i18next": "^19.7.0",
     "i18next-parser": "^5.4.0",
     "identity-obj-proxy": "^3.0.0",
@@ -72,7 +74,7 @@
     "jest-environment-jsdom": "^28.1.2",
     "lerna": "^4.0.0",
     "lodash": "^4.17.21",
-    "openmrs": "^4.0.2",
+    "openmrs": "4.0.2-pre.336",
     "prettier": "^2.2.1",
     "pretty-quick": "^2.0.2",
     "react": "^18.2.0",
@@ -83,6 +85,7 @@
     "swc-loader": "^0.1.15",
     "swr": "^1.1.2",
     "systemjs-webpack-interop": "^2.3.7",
+    "turbo": "^1.5.5",
     "typescript": "^4.6.3",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.4.0",
