--- a/packages/esm-ohri-core-app/package.json
+++ b/packages/esm-ohri-core-app/package.json
@@ -44,5 +44,8 @@
     "react": "^18.2.0",
     "react-i18next": "^11.7.0",
     "webpack": "^5.74.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0"
   }
 }
