--- a/packages/esm-ohri-pmtct-app/package.json
+++ b/packages/esm-ohri-pmtct-app/package.json
@@ -2,7 +2,7 @@
   "name": "@ohri/openmrs-esm-ohri-pmtct",
   "version": "1.0.0",
   "description": "PMTCT microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
-  "browser": "dist/openmrs-esm-ohri-pmtct.js",
+  "browser": "dist/ohri-pmtct-app.js",
   "main": "src/index.ts",
   "license": "MIT",
   "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri#readme",
