--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.4",
     "@types/lodash": "^4.14.182",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
