--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@carbon/react": "^1.13.0",
-    "@ohri/openmrs-ohri-form-engine-lib": "^1.0.0-pre.118",
+    "@ohri/openmrs-ohri-form-engine-lib": "^1.0.1",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
     "semver": "^7.3.7",
