--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "extract-translations": "lerna run extract-translations",
     "ci:publish-next": "lerna publish from-package --no-git-reset --dist-tag next --yes",
     "ci:publish-next-patch": "lerna version patch && lerna publish from-package --no-git-reset --dist-tag next --yes",
-    "release": "lerna version --no-git-tag-version"
+    "release": "lerna version --no-git-tag-version",
+    "ci:bump-form-engine": "yarn up @ohri/openmrs-ohri-form-engine-lib@next"
   },
   "husky": {
     "hooks": {
