--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -156,6 +156,28 @@ jobs:
 
             port: ${{ secrets.HISTAC_PORT }}
 
+  dev_nambia:
+    runs-on: ubuntu-latest
+
+    needs: dev
+
+    if: ${{ github.ref == 'refs/heads/namibia' }}
+
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+      - name: Compute Timestamp
+        run: echo "TIMESTAMP=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+            # command: cd /usr/share/tomcat/microfrontends/dev && /bin/bash update_microfrontends.sh
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+
+            port: ${{ secrets.HISTAC_PORT }}
+
   pre_demo:
     runs-on: ubuntu-latest
 
