--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ci:publish": "lerna publish from-package --yes",
     "ci:release": "lerna version --no-git-tag-version",
     "coverage": "yarn test --coverage",
-    "extract-translations": "lerna run extract-translations",
+    "extract-translations": "lerna run extract-translations -- --config ../../tools/i18next-parser.config.js",
     "ci:publish-next": "lerna publish from-package --no-git-reset --dist-tag next --yes",
     "ci:publish-next-patch": "lerna version patch && lerna publish from-package --no-git-reset --dist-tag next --yes",
     "release": "lerna version --no-git-tag-version",
