--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -26,7 +26,8 @@
     "docker:dev": "docker compose up",
     "lint": "eslint src --ext tsx",
     "typescript": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "extract-translations": "i18next 'src/**/*.component.tsx'"
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
