--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -156,7 +156,7 @@ jobs:
 
             port: ${{ secrets.HISTAC_PORT }}
 
-  dev_nambia:
+  dev_namibia:
     runs-on: ubuntu-latest
 
     needs: pre_release
