--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -167,7 +167,7 @@ jobs:
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
-            command: cd /opt/microfrontends && /bin/bash update_microfrontends.sh
+            command: who && which node && cd /opt/microfrontends && /bin/bash update_microfrontends.sh
             host: ${{ secrets.HISTAC_HOST }}
             username: ${{ secrets.HISTAC_USERNAME }}
             privateKey: ${{ secrets.HISTAC_KEY}}
