--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
   },
   "resolutions": {
     "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5"
+    "@types/react-dom": "^18.0.5",
+    "@ohri/openmrs-ohri-form-engine-lib": "portal:/Users/Kajambiya/Desktop/Work/openmrs-ohri-form-engine-lib"
   },
   "packageManager": "yarn@3.2.2"
 }
