--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,6 +54,7 @@ jobs:
           path: |
             packages/**/dist
 
+
   pre_release:
     runs-on: ubuntu-latest
 
@@ -123,7 +124,9 @@ jobs:
 
       if: ${{ github.ref == 'refs/heads/working' }}
 
+
       steps:
+        
         # Update the Microfrontends to reflect what we have in the Working branch
         - uses: garygrossgarten/github-action-ssh@release
           name: Run the Update MicroFronEnd Script
@@ -132,8 +135,25 @@ jobs:
               host: ${{ secrets.HISTAC_HOST }}
               username: ${{ secrets.HISTAC_USERNAME }}
               privateKey: ${{ secrets.HISTAC_KEY}}
-              port: ${{ secrets.HISTAC_PORT }}
-
+              port: ${{ secrets.HISTAC_PORT }} 
+        -
+          name: Login to Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+        -
+          name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+        -
+          name: Build and push
+          uses: docker/build-push-action@v3
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+            
   dev:
     runs-on: ubuntu-latest
 
