Docker configuration for Working, include ohri images, separate the Docker Job, include Job dependency

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -139,6 +139,9 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
+
+    needs: working
+
     steps:
       -
         name: Checkout
@@ -160,7 +163,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest      
-              
+
   dev:
     runs-on: ubuntu-latest
 
