--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   "resolutions": {
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "@ohri/openmrs-ohri-form-engine-lib": "portal:/Users/sam/openmrs-ohri-form-engine-lib"
+    "@ohri/openmrs-ohri-form-engine-lib": "next"
   },
   "packageManager": "yarn@3.2.2"
 }
