--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "1.0.2",
+  "version": "1.0.3-alpha.0",
   "command": {
     "publish": {
       "verifyAccess": false
