--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -41,8 +41,7 @@
     "@openmrs/esm-patient-common-lib": "4.x",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "swr": "^1.1.2"
+    "react-i18next": "^11.18.6"
   },
   "devDependencies": {
     "webpack": "^5.74.0"
