--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -206,9 +206,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: | 
-            histacoohri/o3-reference-ohri:"$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}"
-            ghcr.io/histacoohri/o3-reference-ohri:"$(node -e "console.log(require('./lerna.json').version)")-pre.${{ github.run_number }}"
+          tags: ${{ steps.meta.outputs.tags }}
+            
 
   pre_demo:
     runs-on: ubuntu-latest
