OHRI-1250 adds additional patient datatable

--- a/packages/esm-ohri-core-app/tsconfig.json
+++ b/packages/esm-ohri-core-app/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../esm-commons-lib/src/components/patient-lists/patient-list.component.tsx", "../esm-commons-lib/src/components/patient-lists/patient-list.component.tsx"],
   "exclude": ["src/**/*.test.tsx", "src/**/*.outdated.tsx"]
 }
