--- a/packages/esm-ohri-pmtct-app/package.json
+++ b/packages/esm-ohri-pmtct-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-pmtct",
-  "version": "1.0.4-alpha.0",
+  "version": "1.0.4",
   "description": "PMTCT microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-pmtct-app.js",
   "main": "src/index.ts",
