--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Run build
         run: yarn turbo run build --color --concurrency=5 --api="http://127.0.0.1:9080" --token="${{ secrets.TURBO_SERVER_TOKEN }}" --team="${{ github.repository_owner }}"
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
         with:
           name: packages
           path: |
@@ -84,6 +84,9 @@ jobs:
 
       - name: Build
         run: yarn turbo run build --color --concurrency=5
+  
+      - name: Test and Generate Badges
+        run: yarn badges 
 
       - name: setup git config
         run: |
@@ -111,8 +114,20 @@ jobs:
         with:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
-      - run: yarn install --immutable
-      - run: yarn run ci:publish
+
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install --immutable
+      
+      - name: Publish to NPM
+        run: yarn run ci:publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
