Fix tests config, add badges, include in CI, change package mnager CLI

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently 'npm:verify'"
+      "pre-commit": "pretty-quick --staged && concurrently 'yarn verify'"
     }
   },
   "devDependencies": {
