--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ci:publish-next": "lerna publish from-package --no-git-reset --dist-tag next --yes",
     "ci:publish-next-patch": "lerna version patch && lerna publish from-package --no-git-reset --dist-tag next --yes",
     "release": "lerna version --no-git-tag-version",
-    "ci:bump-form-engine": "yarn up @ohri/openmrs-ohri-form-engine-lib@next"
+    "ci:bump-form-engine": "yarn up @openmrs/openmrs-form-engine-lib"
   },
   "devDependencies": {
     "@openmrs/esm-framework": "next",
@@ -96,7 +96,8 @@
   },
   "resolutions": {
     "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5"
+    "@types/react-dom": "^18.0.5",
+    "@openmrs/openmrs-form-engine-lib": "next"
   },
   "packageManager": "yarn@3.2.2"
 }
