--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -47,7 +47,7 @@
     "react-i18next": "^11.18.6"
   },
   "devDependencies": {
-    "@openmrs/openmrs-form-engine-lib": "next",
+    "@openmrs/openmrs-form-engine-lib": "1.0.0-pre.44",
     "browserslist-config-openmrs": "^1.0.0",
     "i18next": "^19.4.2",
     "react": "^18.2.0",
