--- a/packages/esm-ohri-core-app/src/ohri-esm-and-dashboards-config.json
+++ b/packages/esm-ohri-core-app/src/ohri-esm-and-dashboards-config.json
@@ -24,6 +24,21 @@
       }
     }
   },
+  "@ohri/openmrs-esm-ohri-core-app": {
+    "extensionSlots": {
+      "ohri-dashboard-appointments-slot": {
+        "add": [
+          "clinical-appointments-dashboard"
+        ]
+      },
+      "ohri-dashboard-dispensing-slot": {
+        "add": [
+          "dispensing-dashboard"
+        ]
+      }
+    }
+  },
+
   "@openmrs/esm-styleguide": {
     "Brand color #1": "#1A3054",
     "Brand color #2": "#131E35",
