--- a/packages/esm-ohri-core-app/src/ohri-esm-and-dashboards-config.json
+++ b/packages/esm-ohri-core-app/src/ohri-esm-and-dashboards-config.json
@@ -38,10 +38,18 @@
       }
     }
   },
-
   "@openmrs/esm-styleguide": {
     "Brand color #1": "#1A3054",
     "Brand color #2": "#131E35",
     "Brand color #3": "#0078A6"
+  },
+  "@openmrs/esm-primary-navigation-app": {
+    "extensionSlots": {
+      "app-menu-slot": {
+        "remove": [
+          "dispensing-link"
+        ]
+      }
+    }
   }
 }
