--- a/package.json
+++ b/package.json
@@ -96,8 +96,7 @@
   },
   "resolutions": {
     "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@openmrs/openmrs-form-engine-lib": "portal:/Users/sam/openmrs-form-engine-lib"
+    "@types/react-dom": "^18.0.5"
   },
   "packageManager": "yarn@3.2.2"
 }
