--- a/packages/esm-ohri-pmtct-app/package.json
+++ b/packages/esm-ohri-pmtct-app/package.json
@@ -41,7 +41,8 @@
     "@openmrs/esm-patient-common-lib": "4.x",
     "dayjs": "^1.8.16",
     "react": "^18.2.0",
-    "react-i18next": "^11.18.6"
+    "react-i18next": "^11.7.0",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "webpack": "^5.74.0"
