--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,8 @@
   "version": "1.0.9-alpha.0",
   "command": {
     "publish": {
-      "verifyAccess": false
+      "verifyAccess": false,
+      "skipGit": true
     }
   }
 }
