--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -198,7 +198,7 @@ jobs:
         name: Run the Update MicroFronEnd Script for Namibia
         with:
             command: who && which node && cd /opt/microfrontends && /bin/bash update_microfrontends.sh
-            host: ${{ secrets.HISTAC_HOST }}
+            host: ${{ secrets.HISTAC_NAMIBIA_HOST }}
             username: ${{ secrets.HISTAC_USERNAME }}
             privateKey: ${{ secrets.HISTAC_KEY}}
 
