--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "1.0.9-alpha.1",
+  "version": "1.0.9",
   "command": {
     "publish": {
       "verifyAccess": false,
