--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-commons-lib",
-  "version": "1.0.9-alpha.0",
+  "version": "1.0.9",
   "description": "Commons library microfrontend of shared assets for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/ohri-commons-lib.js",
   "main": "src/index.ts",
