--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,7 @@
       "paths": {
         "@openmrs/*": ["./node_modules/@openmrs/*"]
       }
-    }
+    },
+    "exclude": ["node_modules", "**/*/lib", "**/*/dist"],
+
   }
