--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,17 @@ jobs:
         run: yarn install --immutable
 
       - name: Run tests
-        run: yarn run test
+        run: yarn test
+
+      - name: Run Coverage
+        run: yarn coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env: CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       # Temporarily disable typecheck
       # - name: Run lint and typecheck
