--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prepare": "husky install",
     "test": "jest --config jest.config.json --verbose false --passWithNoTests",
     "test-watch": "jest --watch --config jest.config.js",
+    "lint:fix": "turbo run lint --fix",
     "verify": "turbo run lint && turbo run typescript && yarn test --coverage",
     "ci:prepublish": "lerna publish from-package --no-git-reset --yes --dist-tag next",
     "ci:prerelease": "lerna version prerelease --no-git-tag-version --yes",
@@ -64,6 +65,7 @@
     "eslint-config-prettier": "^8.2.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.5.1",
     "husky": "^8.0.0",
