--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -54,5 +54,6 @@
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.3.0",
     "webpack": "^5.74.0"
-  }
+  },
+  "gitHead": "b14f473072180afa65525fdda8f507c89ff6946d"
 }
