Update coverage action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,12 @@ on:
       - created
 
 jobs:
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v3
+        - uses: ArtiomTr/jest-coverage-report-action@v2
+
   build:
     runs-on: ubuntu-latest
 
