--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -219,7 +219,7 @@ jobs:
             command: who && which node && cd /opt/frontend_modules && /bin/bash update_microfrontends.sh
             host: ${{ secrets.HISTAC_DEV_NAMIBIA_HOST }}
             username: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME }}
-            privateKey: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME}}
+            privateKey: ${{ secrets.HISTAC_DEV_NAMIBIA_KEY}}
             port: ${{ secrets.HISTAC_DEV_NAMIBIA_PORT }}
 
             proxy_host: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_HOST }}
