Update typo of user key, create branch workaround

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -226,6 +226,25 @@ jobs:
             proxy_username: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME }}
             proxy_port: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_PORT }}
 
+  ohri_dev_proxy_namibia:
+    runs-on: ubuntu-latest
+
+    if: ${{ github.ref == 'refs/heads/dev-ci-cd' }}
+
+    steps:
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script for Namibia
+        with:
+            command: who && which node && cd /opt/frontend_modules && /bin/bash update_microfrontends.sh
+            host: ${{ secrets.HISTAC_DEV_NAMIBIA_HOST }}
+            username: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME }}
+            privateKey: ${{ secrets.HISTAC_DEV_NAMIBIA_KEY}}
+            port: ${{ secrets.HISTAC_DEV_NAMIBIA_PORT }}
+
+            proxy_host: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_HOST }}
+            proxy_username: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME }}
+            proxy_port: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_PORT }}
+
   pre_demo:
     runs-on: ubuntu-latest
 
