--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -232,6 +232,18 @@ jobs:
     if: ${{ github.ref == 'refs/heads/dev-ci-cd' }}
 
     steps:
+      steps:
+        - name: Print SSH Command and Secret Variables
+          run: |
+            echo "SSH Command: ssh -i _key> -p <port> <username>@<host> -o 'ProxyCommand=ssh -W %h:%p -p <proxy_port> <proxy_username>@<proxy_host>'"
+            echo "Secret Variables:"
+            echo "HISTAC_DEV_NAMIBIA_HOST: ${{ secrets.HISTAC_DEV_NAMIBIA_HOST }}"
+            echo "HISTAC_DEV_NAMIBIA_USERNAME: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME }}"
+            echo "HISTAC_DEV_NAMIBIA_KEY: ${{ secrets.HISTAC_DEV_NAMIBIA_KEY }}"
+            echo "HISTAC_DEV_NAMIBIA_PORT: ${{ secrets.HISTAC_DEV_NAMIBIA_PORT }}"
+            echo "HISTAC_DEV_NAMIBIA_PROXY_HOST: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_HOST }}"
+            echo "HISTAC_DEV_NAMIBIA_PROXY_PORT: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_PORT }}"
+
       - uses: appleboy/ssh-action@v0.1.10
         name: Run the Update MicroFronEnd Script for Dev Namibia
         with:
@@ -242,6 +254,7 @@ jobs:
             proxy_host: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_HOST }}
             proxy_username: ${{ secrets.HISTAC_DEV_NAMIBIA_USERNAME }}
             proxy_port: ${{ secrets.HISTAC_DEV_NAMIBIA_PROXY_PORT }}
+            debug: truen
             script: who && which node && cd /opt/frontend_modules && /bin/bash update_microfrontends.sh
 
   pre_demo:
