--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: OHRI CI - 
+name: OHRI CI - @esm and Docker Image
 
 on:
   push:
@@ -158,14 +158,9 @@ jobs:
   dev_server_status:
     if: github.ref == 'refs/heads/dev' 
     runs-on: ubuntu-latest
-    needs: docker_staging_backend
+    needs: docker_devserver_frontend
 
     steps:
-      - name: Wait for 5 minutos - Let Images reflect on Docker Hub
-        run: sleep 300
-      - name: Checkout repository
-        uses: actions/checkout@v3  
-
       - name: Copy files to /home/runner/
         run: |
           ls -la -t
