--- a/packages/esm-cervical-cancer-app/package.json
+++ b/packages/esm-cervical-cancer-app/package.json
@@ -21,7 +21,9 @@
     "extends browserslist-config-openmrs"
   ],
   "keywords": [
-    "openmrs"
+    "openmrs",
+    "ohri",
+    "cervical cancer"
   ],
   "publishConfig": {
     "access": "public"
@@ -39,9 +41,10 @@
   "peerDependencies": {
     "@openmrs/esm-framework": "5.x",
     "@openmrs/esm-patient-common-lib": "6.x",
-    "dayjs": "^1.8.16",
-    "react": "^18.2.0",
-    "react-i18next": "^11.18.6"
+    "dayjs": "1.x",
+    "react": "18.x",
+    "react-i18next": "11.x",
+    "swr": "2.x"
   },
   "devDependencies": {
     "webpack": "^5.74.0"
