--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -43,9 +43,10 @@
   "peerDependencies": {
     "@openmrs/esm-framework": "5.x",
     "@openmrs/esm-patient-common-lib": "6.x",
-    "dayjs": "^1.8.16",
-    "react": "^18.2.0",
-    "react-i18next": "^11.18.6"
+    "dayjs": "1.x",
+    "react": "18.x",
+    "react-i18next": "11.x",
+    "swr": "2.x"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
